# nightmaregl

./: .gitignore  Cargo.toml  README.md  TODO.md
derive/: Cargo.toml
derive/src/: lib.rs
examples/: animation.rs  sprite.rs  text.rs  transform.rs
nightmare/: Cargo.toml
nightmare/examples/: animation.rs  render.rs  sprite.rs  text.rs  transform.rs
nightmare/src/: animation.rs  color.rs  context.rs  default.frag  default.vert  derive.rs  events.rs  font.frag  framebuffer.rs  lib.rs  material.rs  render.rs  render2d.rs  shader.frag  shader.vert  shader2d.frag  shader2d.vert  shaders.rs  sprite.rs  text.rs  texture.rs  transform.rs  vertexpointers.rs  viewport.rs
nightmare/src/extras/: entries.rs  mod.rs
nightmare/src/old-render-nonsense/: default.rs  mod.rs
nightmare/src/pixels/: mod.rs  region.rs
nightmare/src/renderer/: default.rs  mod.rs  shaders.rs  vertexpointers.rs
shaders/: Cargo.toml
shaders/src/: lib.rs
src/: animation.rs  color.rs  context.rs  default.frag  default.vert  errors.rs  events.rs  font.frag  framebuffer.rs  lib.rs  pixel.rs  sprite.rs  text.rs  texture.rs  transform.rs  viewport.rs
src/extras/: binary_tree.rs  binarytree.rs  entries.rs  mod.rs
src/pixels/: mod.rs  pixel.rs  region.rs
src/renderer/: default.rs  mod.rs  renderer.rs  shaders.rs
