[package]
name = "nightmaregl"
version = "0.1.0"
authors = ["Togglebit <me@togglebit.io>"]
edition = "2018"

[features]
default = ["text", "eventloop", "extras"]
text = []
eventloop = []
extras = []

[dependencies]
bytemuck = { version = "1.5.1", features = ["derive"] }
euclid = "0.22.2"
gl33 = { version = "0.2.1", features = ["global_loader"] }
glutin = "0.26.0"
log = "0.4.14"
nalgebra = "0.26.1"
num-traits = "0.2.14"
png = "0.16.8"
pretty_env_logger = "0.4.0"
rusttype = { version = "0.9.2", features = ["gpu_cache"] }
thiserror = "1.0.24"
unicode-segmentation = "1.7.1"
